objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Genre__c</fullName>
        <description>Defines the Genre of the Book</description>
        <label>Genre</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Children’s</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Contemporary</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Dystopian</fullName>
                </value>
                <value>
                    <fullName>Fable</fullName>
                </value>
                <value>
                    <fullName>Fairy Tale</fullName>
                </value>
                <value>
                    <fullName>Families &amp; Relationships</fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Fiction</fullName>
                </value>
                <value>
                    <fullName>Folklore</fullName>
                </value>
                <value>
                    <fullName>Guide / How-to</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>Historical fiction</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Humor</fullName>
                </value>
                <value>
                    <fullName>Memoir</fullName>
                </value>
                <value>
                    <fullName>Motivational</fullName>
                </value>
                <value>
                    <fullName>Mystery</fullName>
                </value>
                <value>
                    <fullName>Paranormal</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Science Fiction</fullName>
                </value>
                <value>
                    <fullName>Self-help / Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Records the language in which the book was written/published</description>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic, Algerian Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Egyptian Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Mesopotamian Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Moroccan Spoken </fullName>
                </value>
                <value>
                    <fullName>Arabic, Najdi Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, North Levantine Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Saidi Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Sanaani Spoken</fullName>
                </value>
                <value>
                    <fullName>Arabic, Sudanese Spoken </fullName>
                </value>
                <value>
                    <fullName>Arabic, Tunisian Spoken</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Awadhi</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani, North</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani, South</fullName>
                </value>
                <value>
                    <fullName>Belarusan</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bhojpuri</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarhi</fullName>
                </value>
                <value>
                    <fullName>Chinese, Gan</fullName>
                </value>
                <value>
                    <fullName>Chinese, Hakka</fullName>
                </value>
                <value>
                    <fullName>Chinese, Jinyu</fullName>
                </value>
                <value>
                    <fullName>Chinese, Mandarin</fullName>
                </value>
                <value>
                    <fullName>Chinese, Min Bei</fullName>
                </value>
                <value>
                    <fullName>Chinese, Min Nan</fullName>
                </value>
                <value>
                    <fullName>Chinese, Wu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publishing_Date__c</fullName>
        <description>Records the date when the book was published by a Publishing House</description>
        <label>Publishing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publishing_House__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Captures the Publishing House company where the books was published</description>
        <label>Publishing House</label>
        <referenceTo>Publishing_House__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Book Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Genre__c</columns>
        <columns>Language__c</columns>
        <columns>Publishing_Date__c</columns>
        <columns>Publishing_House__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>